# chess-motor-web

./: .env.example  .gitignore  next.config.js  package-lock.json  package.json  server.js  tailwind.config.ts  tsconfig.tsbuildinfo
client/: index.html  main.js  style.css
server/: engine-bridge.js  engines.js  index.js  match.js  mega.js  package-lock.json  package.json  stockfish-bridge.js
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AnalysisTab.tsx  BoardWorkspace.tsx  DatabasesTab.tsx  EngineSettings.tsx  EnginesTab.tsx  EvalBar.tsx  EvalGraph.tsx  FilesTab.tsx  HomeTab.tsx  Icon.tsx  InfoPanel.tsx  MatchTab.tsx  MoveHistory.tsx  MoveTree.tsx  OpeningExplorer.tsx  PlayTab.tsx  SettingsTab.tsx  StudyTab.tsx  Tablebase.tsx  WsProvider.tsx  ui.tsx
src/data/: eco.json
src/lib/: eco.ts  openingIndex.ts  sound.ts  ws.ts
src/store/: analysisStore.ts  boardsStore.ts  databasesStore.ts  engineStore.ts  enginesStore.ts  gameStore.ts  navStore.ts  studyStore.ts  treeStore.ts  uiStore.ts  workspaceStore.ts
tools/: build_eco.py  build_megabook.py  megalib.py  test_decode.py
